--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(datas_course)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp header.h BinTree.h Queue.h BST.h AVL.h)
+set(SOURCE_FILES main.cpp header.h BinTree.h Queue.h BST.h AVL.h List.h)
 add_executable(datas_course ${SOURCE_FILES})
